--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/(.*)",
       "dest": "dist/main.js"
-    }
+    },
+    {
+      "src": "/graphql",
+      "dest": "dist/main.js"
+    }, 
   ]
 }
