--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.0.2",
     "@nestjs/platform-express": "^11.0.1",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "graphiql": "^3.8.3",
