--- a/vercel.json
+++ b/vercel.json
@@ -10,11 +10,11 @@
   "routes": [
     {
       "src": "/graphql",
-      "dest": "dist/main.js"
+      "dest": "/dist/main.js"
     },
     {
       "src": "/(.*)",
-      "dest": "dist/main.js"
+      "dest": "/dist/main.js"
     }
   ]
 }
