--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "dotenv": "^16.4.7",
     "graphiql": "^3.8.3",
     "graphql": "^16.10.0",
+    "graphql-tools": "^9.0.13",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
