--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths":{
+      "@/*":["./src/*"],
+    }
   }
 }
