--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
-
 {
   "version": 2,
   "builds": [
     {
-      "src": "dist/main.js",
+      "src": "src/main.ts",
       "use": "@vercel/node"
     }
   ],
@@ -15,7 +14,7 @@
         "GET",
         "POST",
         "PUT",
-        "PATCH"
+        "DELETE"
       ]
     }
   ]
